landing page incomplete

--- a/style.css
+++ b/style.css
@@ -15,6 +15,21 @@ a {
     text-decoration: none;
 }
 
+h1 {
+    font-size: 48px;
+    color: #1a202c;
+    line-height: 1.25;
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.purple {
+    color: #6415ff;
+}
+
 .row {
     width: 100%;
     max-width: 1200px;
@@ -64,7 +79,12 @@ nav {
     padding-top: 4px;
     letter-spacing: 0.35px;
     margin: 0 24px;
-    border-bottom: 2px;
+    border-bottom: 2px solid transparent;
+    transition: all 300ms;
+}
+
+.nav__link:hover {
+    color: #6415ff;
 }
 
 .login {
@@ -80,4 +100,90 @@ nav {
     line-height: 1.5;
     border: none;
     width: auto;
+    transition: all 300ms;
+}
+
+.nav__link--primary:hover {
+    background-color: rgba(80, 17, 204)
+}
+
+/* HEADER */
+
+.container {
+    padding: 96px 0;
+}
+
+header .row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header__description {
+    width: 40%;
+}
+
+.header__description--para {
+    margin: 32px 0;
+}
+
+.header__email {
+    width: 100%;
+    max-width: 448px;
+    height: 68px;
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.header__email--input {
+    width: 100%;
+    border-radius: 500px;
+    border: 2px solid rgb(229, 231, 235);
+    padding: 20px 192px 20px 32px;
+    color: rgb(36, 62, 99);
+    font-size: 16px;
+    font-weight: 500;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
+}
+
+.header__email--btn {
+    z-index: 2;
+    margin: 8px;
+    height: calc(100% - 16px);
+    border-radius: 500px;
+    width: 160px;
+    border: none;
+    background-color: #6415ff;
+    color: #fff;
+    font-weight: 700;
+    font-size: 16px;
+    transition: all 300ms;
+}
+
+.header__customers--title {
+    margin-top: 80px;
+    color: #a0aec0;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 0.6px;
+}
+
+.header__customers {
+    margin-top: 16px;
+    padding-right: 128px;
+    opacity: 0.5;
+}
+
+.header__img--wrapper {
+    width: 60%;
+}
+
+.header__img {
+    width: 100%;
+    max-width: 512px;
 }
