--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@ a {
 }
 
 h1 {
-    font-size: 48px;
+    font-size: 36px;
     color: #1a202c;
     line-height: 1.25;
 }
 
 p {
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.5;
 }
 
@@ -121,6 +121,8 @@ header .row {
 
 .header__description {
     width: 40%;
+    display: flex;
+    flex-direction: column;
 }
 
 .header__description--para {
@@ -149,6 +151,17 @@ header .row {
     top: 0;
     bottom: 0;
     z-index: 1;
+    transition: border-color 300ms;
+}
+
+.header__email--input:hover {
+    border-color: rgba(160, 174, 192);
+}
+
+.header__email--input:focus, .header__email--input:active {
+    outline: transparent solid 2px;
+    outline-offset: 2px;
+    border-color: rgba(100, 21, 255);
 }
 
 .header__email--btn {
@@ -181,6 +194,8 @@ header .row {
 
 .header__img--wrapper {
     width: 60%;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .header__img {
