--- a/style.css
+++ b/style.css
@@ -36,6 +36,17 @@ p {
     margin: 0 auto;
 }
 
+.btn {
+    background-color: #6415ff;
+    padding: 12px 32px;
+    border: none;
+    border-radius: 500px;
+    font-size: 14px;
+    color: #fff;
+    font-weight: bold;
+    transition: all 300ms;
+}
+
 /* NAVIGATION BAR */
 
 nav {
