--- a/style.css
+++ b/style.css
@@ -293,3 +293,40 @@ header .row {
     line-height: 2;
     font-weight: 500;
 }
+
+/* QUALITY */
+
+#quality .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.quality__description {
+    max-width: 576px;
+    margin-right: 64px;
+}
+
+.quality__description, .quality__img--wrapper {
+    width: 50%;
+}
+
+#quality .section__title {
+    line-height: 1.25;
+}
+
+#quality .btn {
+    margin-top: 32px;
+}
+
+.quality__img--wrapper {
+    border-radius: 4px;
+    border: 1px solid rgb(229, 231, 235);
+    margin: 0 56px;
+    display: flex;
+    flex-direction: column;
+}
+
+.quality__img {
+    width: 100%;
+}
