--- a/style.css
+++ b/style.css
@@ -401,3 +401,53 @@ header .row {
     line-height: 2;
 }
 
+/* VALUES */
+.value {
+    margin: 40px 32px 0px 0px;
+}
+
+#values .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.values__description {
+    padding: 32px 64px 32px 0;
+}
+
+.values__description, .values__img {
+    width: 50%;
+}
+
+#values .section__title {
+    margin-top: 16px;
+    margin-bottom: 32px;
+    line-height: 1.25;
+}
+
+.value__title {
+    display: flex;
+    align-items: center;
+}
+
+.value__name {
+    margin-left: 12px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #243e63;
+}
+
+.value__para {
+    margin-top: 16px;
+    line-height: 1.625;
+    color: #718096;
+}
+
+.values__list {
+    display: flex;
+}
+
+#values .btn {
+    margin-top: 48px;
+}
