testimonials no css

--- a/style.css
+++ b/style.css
@@ -576,3 +576,9 @@ header .row {
     color: #f7fafc;
     background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
 }
+
+/* TESTIMONIALS */
+
+#testimonials .row {
+    display: flex;
+}
