--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ section {
 
 a {
     text-decoration: none;
+    display: inline;
 }
 
 h1 {
-    font-size: 36px;
+    font-size: 48px;
     color: #1a202c;
     line-height: 1.25;
 }
@@ -118,8 +119,71 @@ nav {
     background-color: rgba(80, 17, 204)
 }
 
+/* MODAL */
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 378px;
+    margin: 24px 16px;
+    padding: 32px;
+    background-color: #fff;
+    border: 1px solid rgb(229, 231, 235);
+    border-radius: 8px;
+    z-index: 4;
+    visibility: hidden;
+    opacity: 0;
+    transform: translateX(300%);
+    transition: all 300ms ease;
+}
+
+.btn__menu--close {
+    position: fixed;
+    top: 24px;
+    right: 18px;
+}
+
+.btn__menu {
+    display: none;
+    background: transparent;
+    border: none;
+    transition: all 300ms ease;
+}
+
+.modal__links {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal__link {
+    color: #1a202c;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.5;
+    margin: 8px 0;
+    padding-bottom: 4px;
+    border-bottom: 2px solid transparent;
+}
+
+.modal__link--primary {
+    color: #f7fafc;
+    padding: 12px 32px;
+    background: #6415ff;
+    border-radius: 500px;
+    border: none;
+}
+
+
 /* HEADER */
 
+header {
+    position: relative;
+}
 .container {
     padding: 96px 0;
 }
@@ -213,6 +277,16 @@ header .row {
 .header__img {
     width: 100%;
     max-width: 512px;
+}
+
+.header__blob {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    opacity: 0.05;
+    width: 256px;
+    height: 256px;
+    transform: matrix(1, 0, 0, 1, -163, 0);
 }
 
 /* FEATURES */
@@ -872,6 +946,9 @@ footer {
 }
 
 @media (max-width: 1024px) {
+    .btn__menu {
+        display: block;
+    }
     h1 {
         font-size: 30px;
     }
