--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ header .row {
 
 .header__img {
     width: 100%;
-    max-width: 512px;
+    max-width: 768px;
 }
 
 .header__blob {
@@ -290,6 +290,11 @@ header .row {
 }
 
 /* FEATURES */
+
+#features {
+    position: relative;
+}
+
 #features .row__narrow {
     display: flex;
     flex-direction: column;
@@ -368,6 +373,16 @@ header .row {
     font-weight: 500;
 }
 
+.features__blob {
+    transform: translateX(96px) translateY(192px) scaleX(1) scaleY(1);
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    width: 16rem;
+    opacity: 0.25;
+    padding: 16px;
+}
+
 /* QUALITY */
 
 #quality .row {
@@ -393,12 +408,32 @@ header .row {
     margin-top: 32px;
 }
 
+.quality__img {
+    z-index: 1;
+}
+
 .quality__img--wrapper {
     border-radius: 4px;
     border: 1px solid rgb(229, 231, 235);
+    position: relative;
     margin: 0 56px;
+    z-index: 2;
     display: flex;
     flex-direction: column;
+}
+
+.quality__grid {
+    transform: translateX(50%) translateY(50%) scaleX(1) scaleY(1);
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    fill: rgb(100, 21, 255);
+    --tw-text-opacity: 1;
+    color: rgba(100, 21, 255, var(--tw-text-opacity));
+    z-index: 0;
+    display: block;
 }
 
 .quality__img {
@@ -419,9 +454,27 @@ header .row {
     flex-direction: column;
 }
 
+.steps__img {
+    z-index: 2;
+}
+
 .steps__img--wrapper {
     display: flex;
     flex-direction: column;
+    position: relative;
+}
+
+.steps__grid {
+    position: absolute;
+    opacity: 0.15;
+    right: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(50%) scaleX(1) scaleY(1);
+    width: 80px;
+    height: 80px;
+    fill: rgba(100, 21, 255);
+    z-index: 1;
 }
 
 .steps__description {
@@ -558,6 +611,17 @@ header .row {
     background: #fff;
 }
 
+.plans__blob {
+    z-index: -10;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: translateX(-50%) translateY(50%) scaleX(1) scaleY(1);
+    height: 256px;
+    width: 256px;
+    opacity: 0.25;
+}
+
 .plan__stripe {
     position: absolute;
     top: 0;
@@ -650,6 +714,8 @@ header .row {
     color: #f7fafc;
     background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
 }
+
+
 
 /* TESTIMONIALS */
 
@@ -928,8 +994,7 @@ footer {
 
 @media(max-width: 1280px) {
     header .row {
-        flex-direction: column;
-        align-items: center;
+        align-items: flex-end;
     }
     h1 {
         font-size: 36px;
