--- a/style.css
+++ b/style.css
@@ -139,6 +139,12 @@ nav {
     transition: all 300ms ease;
 }
 
+.menu--open .modal {
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0);
+}
+
 .btn__menu--close {
     position: fixed;
     top: 24px;
@@ -150,6 +156,10 @@ nav {
     background: transparent;
     border: none;
     transition: all 300ms ease;
+}
+
+.btn__menu--svg:hover {
+    filter: invert(26%) sepia(94%) saturate(7476%) hue-rotate(261deg) brightness(94%) contrast(115%);
 }
 
 .modal__links {
@@ -558,6 +568,19 @@ header .row {
     align-items: center;
 }
 
+.value__img--wrapper {
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.value__img--wrapper {
+    width: 36px;
+    height: 36px;
+    display: flex;
+}
+
 .value__name {
     margin-left: 12px;
     font-size: 20px;
@@ -579,6 +602,14 @@ header .row {
     margin-top: 48px;
 }
 
+.value:nth-child(1) .value__img--wrapper {
+    background-color: #9ae6b4;
+}
+
+.value:nth-child(2) .value__img--wrapper {
+    background-color: #feb2b2;
+}
+
 /* PRICING */
 
 #pricing .row {
@@ -596,6 +627,8 @@ header .row {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    position: relative;
+    z-index: 100;
 }
 
 .plan {
@@ -856,6 +889,28 @@ button {
     align-items: center;
 }
 
+.start__blob--1 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translateX(-80px) translateY(128px) scaleX(1) scaleY(1);
+    width: 320px;
+    height: 320px;
+    z-index: 1;
+    opacity: 0.5;
+}
+
+.start__blob--2 {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translateX(80px) translateY(-256px);
+    width: 320px;
+    height: 320px;
+    z-index: 1;
+    opacity: 0.5;
+}
+
 .start__title {
     color: #f7fafc;
     font-size: 30px;
@@ -905,6 +960,28 @@ footer {
     margin-bottom: -32px;
     position: relative;
     overflow: hidden;
+}
+
+.footer__blob--1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 320px;
+    height: 320px;
+    transform: translateX(-80px) translateY(-128px);
+    z-index: 1;
+    opacity: 0.5;
+}
+
+.footer__blob--2 {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 320px;
+    height: 320px;
+    transform: translateX(128px) translateY(192px);
+    z-index: 1;
+    opacity: 0.5;
 }
 
 .footer__columns {
@@ -988,6 +1065,30 @@ footer {
 .footer__copyright {
     color: #cbd5e0;
     font-weight: 500;
+}
+
+.footer__socials {
+    display: flex;
+    align-items: center;
+    margin-left: -16px;
+}
+
+.footer__social--link {
+    margin-left: 16px;
+    padding: 8px;
+    background: #f7fafc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    z-index: 2;
+    cursor: pointer;
+    transition: all 300ms;
+}
+
+.footer__social--link svg {
+    height: 16px;
+    width: 16px;
 }
 
 /* MOBILE RESPONSIVENESS */
