--- a/style.css
+++ b/style.css
@@ -1236,4 +1236,17 @@ footer {
     main {
         margin-bottom: 80px;
     }
+    .header__email--input {
+        position: static;
+        padding: 16px 0;
+        padding-left: 32px;
+        line-height: 1.5;
+    }
+    .header__email--btn {
+        width: 100%;
+        padding: 16px 0;
+        margin: 16px 0;
+        margin-bottom: 0px;
+        line-height: 1.5;
+    }
 }
