--- a/style.css
+++ b/style.css
@@ -305,6 +305,10 @@ header .row {
     position: relative;
 }
 
+#features .section__title {
+    text-align: center;
+}
+
 #features .row__narrow {
     display: flex;
     flex-direction: column;
@@ -355,6 +359,7 @@ header .row {
 .features {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 40px;
 }
 
 .feature__img--wrapper {
@@ -618,6 +623,10 @@ header .row {
     align-items: center;
 }
 
+#pricing .section__title {
+    text-align: center;
+}
+
 #pricing .section__para {
     max-width: 576px;
     text-align: center;
@@ -633,7 +642,7 @@ header .row {
 
 .plan {
     width: 100%;
-    max-width: calc(100% / 3);
+    max-width: 384px;
     margin: 64px 32px 0 0;
     padding-top: 8px;
     border-radius: 8px;
@@ -1118,6 +1127,12 @@ footer {
     h1 {
         font-size: 30px;
     }
+    .header__description {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     .header__description--para {
         margin: 20px 0;
     }
@@ -1136,6 +1151,13 @@ footer {
     .features {
         max-width: 768px;
     }
+    .feature {
+        width: calc(50%);
+    }
+    .feature__row {
+        padding: 32px 8px;
+        margin: 0 16px;
+    }
     .feature__title {
         line-height: 1;
     }
@@ -1152,6 +1174,10 @@ footer {
     .values__list {
         flex-direction: column;
         max-width: 320px;
+    }
+    .quality__description {
+        margin-right: 0px;
+        padding-right: 48px;
     }
     .plans {
         flex-direction: column;
@@ -1171,6 +1197,15 @@ footer {
     .start__buttons {
         width: auto;
         margin-top: 24px;
+    }
+    .start__button {
+        padding: 16px 32px;
+    }
+    .start__button:nth-child(1) {
+        margin-right: 0;
+    }
+    .start__button:nth-child(2) {
+        margin-top: 16px;
     }
     footer {
         padding: 80px 32px;
@@ -1194,8 +1229,20 @@ footer {
     .section__para {
         font-size: 14px;
     }
+    .feature {
+        width: auto;
+        max-width: 384px;
+    }
     .features {
         justify-content: center;
+    }
+    .step {
+        flex-direction: column;
+        align-items: center;
+    }
+    .step__description {
+        margin-top: 12px;
+        margin-left: 0;
     }
     .quality__description, .quality__img--wrapper, .steps__description, .steps__img--wrapper, .values__description, .values__img, .testimonials__description, .testimonials__img {
         width: 100%;
@@ -1205,6 +1252,11 @@ footer {
         padding: 0;
         margin-top: 64px;
         text-align: center;
+    }
+    .value {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .values__list {
         margin: 0 auto;
@@ -1223,11 +1275,20 @@ footer {
         flex-direction: column;
         align-items: center;
     }
+    .footer__copyright, .footer__socials {
+        margin-top: 32px;
+    }
 }
 
 @media(max-width: 640px) {
     .container {
         padding: 80px 0;
+    }
+    .section__title {
+        font-size: 30px;
+    }
+    .btn {
+        line-height: 1.5;
     }
     .nav__logo {
         margin: 8px 0;
@@ -1247,6 +1308,47 @@ footer {
         padding: 16px 0;
         margin: 16px 0;
         margin-bottom: 0px;
+        line-height: 1.5;
+    }
+    .feature__row {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .feature__title {
+        letter-spacing: 0.025em;
+        line-height: 1;
+    }
+    .feature__text {
+        margin-left: 0px;
+        margin-top: 16px;
+    }
+    .feature__para {
+        margin-top: 4px;
+        line-height: 2;
+    }
+    #steps .section__title {
+        margin: 16px 0 0 0;
+    }
+    .start__buttons {
+        flex-direction: column;
+    }
+    .start__button {
+        padding: 12px 24px;
+        font-size: 14px;
+    }
+    .plan__price {
+        font-size: 36px;
+    }
+    .footer__column {
+        width: auto;
+        padding: 0 16px;
+        text-align: center;
+        align-items: center;
+    }
+    .footer__copyright {
+        font-size: 14px;
+        text-align: center;
         line-height: 1.5;
     }
 }
