--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ h1 {
     line-height: 1.25;
 }
 
+img {
+    width: 100%;
+}
+
 p {
     font-size: 16px;
     line-height: 1.5;
@@ -1296,6 +1300,10 @@ footer {
     }
     main {
         margin-bottom: 80px;
+    }
+    .header__email {
+        flex-direction: column;
+        height: auto;
     }
     .header__email--input {
         position: static;
